--- a/Computer vision/Computer Vision.ipynb
+++ b/Computer vision/Computer Vision.ipynb
@@ -358,7 +358,7 @@
     "                      out_channels=hidden_units,\n",
     "                      kernel_size=3,\n",
     "                      stride=1,\n",
-    "                      padding=1,),\n",
+    "                      padding=1),\n",
     "            nn.ReLU(),\n",
     "            nn.MaxPool2d(kernel_size=2,\n",
     "                         stride=2)\n",
